--- a/oRec/Jet74.InterfaceRecorder/Jet74.InterfaceRecorder.csproj
+++ b/oRec/Jet74.InterfaceRecorder/Jet74.InterfaceRecorder.csproj
@@ -45,6 +45,7 @@
   <ItemGroup>
     <Compile Include="ObjectPrinter.cs" />
     <Compile Include="Interceptor.cs" />
+    <Compile Include="Reflector.cs" />
     <Compile Include="Repository.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Exceptions\SealedClassNotSupportedException.cs" />
