--- a/LazyLegazyMocker/Jet74.LazyLegacyMocker.InterfaceRecorder.Test/Jet74.LazyLegacyMocker.InterfaceRecorder.Test.csproj
+++ b/LazyLegazyMocker/Jet74.LazyLegacyMocker.InterfaceRecorder.Test/Jet74.LazyLegacyMocker.InterfaceRecorder.Test.csproj
@@ -7,8 +7,8 @@
     <ProjectGuid>{A5E0B033-E4A1-4A74-B90A-99E53E6623B4}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Jet74.InterfaceRecorder.Test</RootNamespace>
-    <AssemblyName>Jet74.InterfaceRecorder.Test</AssemblyName>
+    <RootNamespace>Jet74.LazyLegacyMocker.InterfaceRecorder.Test</RootNamespace>
+    <AssemblyName>Jet74.LazyLegacyMocker.InterfaceRecorder.Test</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
@@ -47,13 +47,13 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\Jet74.InterfaceRecorder\Jet74.InterfaceRecorder.csproj">
+    <ProjectReference Include="..\Jet74.LazyLegacyMocker.InterfaceRecorder\Jet74.LazyLegacyMocker.InterfaceRecorder.csproj">
       <Project>{1c728c24-59c1-4f66-b452-080212d3ff82}</Project>
       <Name>Jet74.InterfaceRecorder</Name>
     </ProjectReference>
-    <ProjectReference Include="..\Jet74.oRec.Tests.Model\Jet74.oRec.Tests.Model.csproj">
+    <ProjectReference Include="..\Jet74.LazyLegacyMocker.Tests.Model\Jet74.LazyLegacyMocker.Tests.Model.csproj">
       <Project>{d7401896-0121-4660-a995-31b94f211a2c}</Project>
-      <Name>Jet74.oRec.Tests.Model</Name>
+      <Name>Jet74.LazyLegacyMocker.Tests.Model</Name>
     </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
