--- a/LazyLegazyMocker/Jet74.LazyLegacyMocker.Tests.Model/Jet74.LazyLegacyMocker.Tests.Model.csproj
+++ b/LazyLegazyMocker/Jet74.LazyLegacyMocker.Tests.Model/Jet74.LazyLegacyMocker.Tests.Model.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{1C728C24-59C1-4F66-B452-080212D3FF82}</ProjectGuid>
+    <ProjectGuid>{D7401896-0121-4660-A995-31B94F211A2C}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Jet74.InterfaceRecorder</RootNamespace>
-    <AssemblyName>Jet74.InterfaceRecorder</AssemblyName>
+    <RootNamespace>Jet74.LazyLegacyMocker.Tests.Model</RootNamespace>
+    <AssemblyName>Jet74.LazyLegacyMocker.Tests.Model</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
@@ -16,7 +16,7 @@
     <DebugSymbols>true</DebugSymbols>
     <DebugType>full</DebugType>
     <Optimize>false</Optimize>
-    <OutputPath>..\..\bin\</OutputPath>
+    <OutputPath>bin\Debug\</OutputPath>
     <DefineConstants>DEBUG;TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
@@ -24,16 +24,12 @@
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <DebugType>pdbonly</DebugType>
     <Optimize>true</Optimize>
-    <OutputPath>..\..\bin\</OutputPath>
+    <OutputPath>bin\Release\</OutputPath>
     <DefineConstants>TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="Castle.Core, Version=3.2.0.0, Culture=neutral, PublicKeyToken=407dd0808d44fbdc, processorArchitecture=MSIL">
-      <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\..\bin\Castle.Core.dll</HintPath>
-    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
@@ -43,13 +39,14 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="ObjectPrinter.cs" />
-    <Compile Include="Interceptor.cs" />
-    <Compile Include="Reflector.cs" />
-    <Compile Include="Repository.cs" />
+    <Compile Include="Address.cs" />
+    <Compile Include="Employees.cs" />
+    <Compile Include="IEmployees.cs" />
+    <Compile Include="ISealedType.cs" />
+    <Compile Include="ModelFactory.cs" />
+    <Compile Include="Person.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Exceptions\SealedClassNotSupportedException.cs" />
-    <Compile Include="Exceptions\TypeNotSupportedException.cs" />
+    <Compile Include="SealedType.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
