--- a/LazyLegazyMocker/Jet74.LazyLegacyMocker.Tests.Model/Jet74.LazyLegacyMocker.Tests.Model.csproj
+++ b/LazyLegazyMocker/Jet74.LazyLegacyMocker.Tests.Model/Jet74.LazyLegacyMocker.Tests.Model.csproj
@@ -39,12 +39,12 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Address.cs" />
-    <Compile Include="Employees.cs" />
+    <Compile Include="Entities\Address.cs" />
+    <Compile Include="Entities\Employees.cs" />
     <Compile Include="IEmployees.cs" />
     <Compile Include="ISealedType.cs" />
     <Compile Include="ModelFactory.cs" />
-    <Compile Include="Person.cs" />
+    <Compile Include="Entities\Person.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SealedType.cs" />
   </ItemGroup>
