--- a/LazyLegazyMocker/Jet74.LazyLegacyMocker.InterfaceRecorder.Test/Jet74.LazyLegacyMocker.InterfaceRecorder.Test.csproj
+++ b/LazyLegazyMocker/Jet74.LazyLegacyMocker.InterfaceRecorder.Test/Jet74.LazyLegacyMocker.InterfaceRecorder.Test.csproj
@@ -45,6 +45,7 @@
   <ItemGroup>
     <Compile Include="RepositoryTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="PrinterTests.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Jet74.LazyLegacyMocker.InterfaceRecorder\Jet74.LazyLegacyMocker.InterfaceRecorder.csproj">
