--- a/LazyLegazyMocker/Jet74.LazyLegacyMocker.Tests.Model/Jet74.LazyLegacyMocker.Tests.Model.csproj
+++ b/LazyLegazyMocker/Jet74.LazyLegacyMocker.Tests.Model/Jet74.LazyLegacyMocker.Tests.Model.csproj
@@ -47,6 +47,7 @@
     <Compile Include="Entities\Person.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SealedType.cs" />
+    <Compile Include="StaticTest.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
