--- a/LazyLegazyMocker/Jet74.LazyLegacyMocker.MockObjects/Jet74.LazyLegacyMocker.MockObjects.csproj
+++ b/LazyLegazyMocker/Jet74.LazyLegacyMocker.MockObjects/Jet74.LazyLegacyMocker.MockObjects.csproj
@@ -45,11 +45,15 @@
   <ItemGroup>
     <Compile Include="InstanceComparer.cs" />
     <Compile Include="MockObjectProperties.cs" />
-    <Compile Include="ObjectPrinter.cs" />
+    <Compile Include="Printers\IObjectPrinter.cs" />
+    <Compile Include="Printers\ObjectPrinter.cs" />
     <Compile Include="Interceptor.cs" />
     <Compile Include="Reflector.cs" />
     <Compile Include="Repository.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Targets\FileTarget.cs" />
+    <Compile Include="Targets\ITarget.cs" />
+    <Compile Include="Targets\MemoryTarget.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
