--- a/LazyLegazyMocker/Jet74.LazyLegacyMocker.Tests.Model/Jet74.LazyLegacyMocker.Tests.Model.csproj
+++ b/LazyLegazyMocker/Jet74.LazyLegacyMocker.Tests.Model/Jet74.LazyLegacyMocker.Tests.Model.csproj
@@ -40,8 +40,8 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Entities\Address.cs" />
-    <Compile Include="Entities\Employees.cs" />
-    <Compile Include="IEmployees.cs" />
+    <Compile Include="Entities\Recordable.cs" />
+    <Compile Include="IRecordableInterface.cs" />
     <Compile Include="ISealedType.cs" />
     <Compile Include="ModelFactory.cs" />
     <Compile Include="Entities\Person.cs" />
