--- a/LazyLegazyMocker/Jet74.LazyLegacyMocker.MockObjects/Jet74.LazyLegacyMocker.MockObjects.csproj
+++ b/LazyLegazyMocker/Jet74.LazyLegacyMocker.MockObjects/Jet74.LazyLegacyMocker.MockObjects.csproj
@@ -44,6 +44,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="InstanceComparer.cs" />
+    <Compile Include="MockObjectFactory.cs" />
     <Compile Include="MockObjectProperties.cs" />
     <Compile Include="Printers\IObjectPrinter.cs" />
     <Compile Include="Printers\ObjectPrinter.cs" />
