--- a/LazyLegazyMocker/Jet74.LazyLegacyMocker.MockObjects/Jet74.LazyLegacyMocker.MockObjects.csproj
+++ b/LazyLegazyMocker/Jet74.LazyLegacyMocker.MockObjects/Jet74.LazyLegacyMocker.MockObjects.csproj
@@ -59,7 +59,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Targets\FileTarget.cs" />
     <Compile Include="Targets\ITarget.cs" />
-    <Compile Include="Targets\MemoryTarget.cs" />
+    <Compile Include="Targets\StringTarget.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
