Working with class diff

--- a/LazyLegazyMocker/Jet74.LazyLegacyMocker.MockObjects.Test/Jet74.LazyLegacyMocker.MockObjects.Test.csproj
+++ b/LazyLegazyMocker/Jet74.LazyLegacyMocker.MockObjects.Test/Jet74.LazyLegacyMocker.MockObjects.Test.csproj
@@ -44,6 +44,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="InstanceComparerTest.cs" />
     <Compile Include="RepositoryTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="PrinterTests.cs" />
