--- a/LazyLegazyMocker/Jet74.LazyLegacyMocker.MockObjects/Jet74.LazyLegacyMocker.MockObjects.csproj
+++ b/LazyLegazyMocker/Jet74.LazyLegacyMocker.MockObjects/Jet74.LazyLegacyMocker.MockObjects.csproj
@@ -44,6 +44,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ClassStructure.cs" />
     <Compile Include="Indentation\AbstractIndentation.cs" />
     <Compile Include="Indentation\IIndentation.cs" />
     <Compile Include="Indentation\Spaces.cs" />
@@ -54,12 +55,16 @@
     <Compile Include="Printers\IObjectPrinter.cs" />
     <Compile Include="Printers\ObjectPrinter.cs" />
     <Compile Include="Interceptor.cs" />
+    <Compile Include="PropertyInfoExtension.cs" />
     <Compile Include="Reflector.cs" />
     <Compile Include="Repository.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Targets\FileTarget.cs" />
     <Compile Include="Targets\ITarget.cs" />
     <Compile Include="Targets\StringTarget.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="NewFolder1\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
